--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "inovatio",
+  "name": "meusus",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,12 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.12.10",
+    "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.9",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
-    "run-sequence": "^1.2.1",
-    "gulp-strip-css-comments": "^1.2.0"
+    "gulp-strip-css-comments": "^1.2.0",
+    "run-sequence": "^1.2.1"
   },
   "dependencies": {
     "angular-slugify": "^1.0.3",
