--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name meusus.snapfyapp.com www.mesus.snapfyapp.com;
+    server_name meusus.snapfyapp.com www.mesus.snapfyapp.com teste.meusus.com.br www.teste.meusus.com.br;
 
     access_log off;
     error_log off;
