--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "@angular/platform-browser-dynamic": "^5.2.7",
     "@angular/platform-server": "^5.2.7",
     "@angular/router": "^5.2.7",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "@nguniversal/common": "^5.0.0-beta.6",
     "@nguniversal/express-engine": "^5.0.0-beta.6",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.6",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
